[tool.poetry]
name = "temporal-orchestrator"
version = "0.1.0"
description = "Production-grade Temporal workflow orchestrator for marketing campaigns"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.5.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.123.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
mypy = "^1.7.0"
datamodel-code-generator = "^0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
